--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,7 @@ name = "questionnaire"
 version = "0.0.1.dev"
 description = "Questionnaire for app 'shot in time'"
 authors = [
-    "Dmitriy Amelchenko <d.a.amelchenko@outlook.com>",
     "Naumovitch Daniel <naumovitchdaniel@yandex.ru>",
-    "Labanau Nikita <python.dev.back@gmail.com>",
-    "Ivan Antsipau <antsipau@gmail.com>",
-    "Ekaterina Soroko <soroko.ekaterina@gmail.com>"
 ]
 readme = "README.md"
 
@@ -15,6 +11,7 @@ readme = "README.md"
 python = "^3.10"
 django = "^4.2.4"
 python-dotenv = "^1.0.0"
+openpyxl = "3.0.10"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
