--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.10"
 django = "^4.2.4"
 python-dotenv = "^1.0.0"
 openpyxl = "3.0.10"
+celery = "^5.3.4"
+redis = "^5.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
